# Mathematical-Formalisms

./: .gitignore  .zenodo.json  CITATION.cff  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: verify.yml
papers/2026-noncommutative-t8-clifford/: README.md  conftest.py  pyproject.toml
papers/2026-noncommutative-t8-clifford/examples/: reproduce_paper_claims.py
papers/2026-noncommutative-t8-clifford/paper/: README.md  T8_theta_paper.md
papers/2026-noncommutative-t8-clifford/src/nct8_clifford/: __init__.py  canonical_data.py  dimension_check.py  identities.py
papers/2026-noncommutative-t8-clifford/tests/: test_canonical_data.py  test_dimension_check.py  test_identities.py
