[project]
name = "mathematical-formalisms-meta"
version = "0.0.0"
description = "Meta-package for Mathematical Formalisms by Jared D. Dunahay (development tooling only; install individual papers from papers/*/)"
authors = [{name = "Jared D. Dunahay", email = "jared@trivector.ai"}]
license = "MIT"
readme = "README.md"
requires-python = ">=3.10"

[project.urls]
"Repository" = "https://github.com/Orion-sextant/Mathematical-Formalisms"
"Author" = "https://orcid.org/0009-0004-5735-2872"

[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"
